Radio group no cadastro de fornecedores com o layout do template

--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -711,6 +711,6 @@
 		<h:outputScript library="aceAdmin" name="js/ace.min.js"/>
 
 		<!-- inline scripts related to this page -->
-		
+		<ui:insert name="scripts"></ui:insert>
 	</h:body>
 </html>
