--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -659,11 +659,8 @@
 						<div class="col-xs-12">
 							<!-- PAGE CONTENT BEGINS -->
 							<h:panelGroup id="tabela-form">
-								<h:messages globalOnly="true" id="app-mensagem"
-									infoClass="alert alert-info"
-									errorClass="alert alert-danger" 
-									fatalClass="alert alert-danger" 
-									warnClass="alert alert-warning" />
+
+								<p:messages closable="true" globalOnly="true" autoUpdate="true" showIcon="false"/>
 									
 								<ui:insert name="conteudo"> Formulário </ui:insert>
 
