Exclusão da parcela de pagamento

--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -659,8 +659,10 @@
 						<div class="col-xs-12">
 							<!-- PAGE CONTENT BEGINS -->
 							<h:panelGroup id="tabela-form">
-
-								<p:messages closable="true" globalOnly="true" autoUpdate="true" showIcon="false"/>
+								
+								<p:messages closable="true" globalOnly="true" showIcon="false">
+									<p:autoUpdate/>
+								</p:messages>
 									
 								<ui:insert name="conteudo"> Formulário </ui:insert>
 
