Inicio da configuração do spring security. Refatoração das classes para controle de acesso

--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -353,7 +353,7 @@
 							<li class="divider"></li>
 	
 							<li>
-								<a href="#{facesContext.externalContext.requestContextPath}">
+								<a href="#{facesContext.externalContext.requestContextPath}/logout">
 									<i class="ace-icon fa fa-power-off"></i>
 									Sair
 								</a>
