Inicio da refatoração das viewes para uso em pastas

--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -425,7 +425,7 @@
 	
 					<ul class="submenu">
 						<li class="">
-							<a href="setor.xhtml">
+							<a href="#{request.contextPath}/setor/setor.xhtml">
 								<i class="menu-icon fa fa-caret-right"></i>
 								Setor
 							</a>
@@ -433,7 +433,7 @@
 						</li>
 	
 						<li class="">
-							<a href="conta.xhtml">
+							<a href="#{request.contextPath}/conta/conta.xhtml">
 								<i class="menu-icon fa fa-caret-right"></i>
 								Conta
 							</a>
@@ -441,7 +441,7 @@
 						</li>
 	
 						<li class="">
-							<a href="fornecedor.xhtml">
+							<a href="#{request.contextPath}/fornecedor/fornecedor.xhtml">
 								<i class="menu-icon fa fa-caret-right"></i>
 								Fornecedor
 							</a>
@@ -553,7 +553,7 @@
 					<ul class="breadcrumb">
 						<li>
 							<i class="ace-icon fa fa-home home-icon"></i>
-							<a href="index.xhtml">Home</a>
+							<a href="#{request.contextPath}/index.xhtml">Home</a>
 						</li>
 						
 						<ui:insert name="navegacao">
