Refatoração das views pagamento, baixa e usuario para uso em pastas

--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -449,7 +449,7 @@
 						</li>
 	
 						<li class="">
-							<a href="usuario.xhtml">
+							<a href="#{request.contextPath}/usuario/usuario.xhtml">
 								<i class="menu-icon fa fa-caret-right"></i>
 								Usuário
 							</a>
@@ -474,7 +474,7 @@
 	
 					<ul class="submenu">
 						<li class="">
-							<a href="pagamento.xhtml">
+							<a href="#{request.contextPath}/pagamento/pagamento.xhtml">
 								<i class="menu-icon fa fa-caret-right"></i>
 								Lançamento
 							</a>
@@ -482,7 +482,7 @@
 						</li>
 	
 						<li class="">
-							<a href="baixa.xhtml">
+							<a href="#{request.contextPath}/baixa/baixa.xhtml">
 								<i class="menu-icon fa fa-caret-right"></i>
 								Baixa
 							</a>
@@ -502,7 +502,7 @@
 	
 					<ul class="submenu">
 						<li class="">
-							<a href="contasapagar.xhtml">
+							<a href="#{request.contextPath}/relatorio/contasapagar.xhtml">
 								<i class="menu-icon fa fa-caret-right"></i>
 								Contas a Pagar
 							</a>
@@ -510,7 +510,7 @@
 						</li>
 	
 						<li class="">
-							<a href="pagamentosefetuados.xhtml">
+							<a href="#{request.contextPath}/relatorio/pagamentosefetuados.xhtml">
 								<i class="menu-icon fa fa-caret-right"></i>
 								Pagamentos Efetuados
 							</a>
@@ -529,7 +529,7 @@
 				</li>
 	
 				<li class="">
-					<a href="#">
+					<a href="#{facesContext.externalContext.requestContextPath}/logout">
 						<i class="menu-icon fa fa-user-times"></i>
 	
 						<span class="menu-text">
