Inclusão do jasperReport no pom e correção do hibernate validator para campos nulos

--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -407,7 +407,7 @@
 	
 			<ul class="nav nav-list">
 				<li class="">
-					<a href="index.xhtml">
+					<a href="#{request.contextPath}/index.xhtml">
 						<i class="menu-icon fa fa-tachometer"></i>
 						<span class="menu-text"> Dashboard </span>
 					</a>
