Correção do template

--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -62,10 +62,7 @@
 				<a href="index.html" class="navbar-brand">
 					<small>
 						<i class="fa fa-money"></i>
-						Agenda Financeira 
-						
-<h:outputText value=" - Grupo: #{sessionBean.getGrupoMenuAtivo()} - Opção: #{sessionBean.getOpcaoMenuAtiva()} " />
-
+						Agenda Financeira
 					</small>
 				</a>
 			</div>
@@ -408,8 +405,8 @@
 				</div>
 			</div><!-- /.sidebar-shortcuts -->
 	
-			<ul jsf:id="menu-lateral" class="nav nav-list">
-				<li jsf:id="dashborad" class="">
+			<ul class="nav nav-list">
+				<li class="">
 					<a href="#{request.contextPath}/index.xhtml">
 						<i class="menu-icon fa fa-tachometer"></i>
 						<span class="menu-text"> Dashboard </span>
@@ -417,7 +414,7 @@
 					<b class="arrow"></b>
 				</li>
 	
-				<li jsf:id="menu-cadastro" class="">
+				<li class="">
 					<a href="#" class="dropdown-toggle">
 						<i class="menu-icon fa fa-pencil-square-o"></i>
 						<span class="menu-text"> Cadastros </span>
@@ -427,8 +424,7 @@
 					<b class="arrow"></b>
 	
 					<ul class="submenu">
-						<li jsf:id="setor" class="#{sessionBean.opcaoMenuAtiva('Setor')}">
-							<f:ajax event="click" render="menu-lateral" listener="#{sessionBean.mudarOpcaoMenu('Setor')}"/>
+						<li class="">
 							<a href="#{request.contextPath}/setor/setor.xhtml">
 								<i class="menu-icon fa fa-caret-right"></i>
 								Setor
@@ -436,17 +432,15 @@
 							<b class="arrow"></b>
 						</li>
 	
-						<li jsf:id="conta" class="#{sessionBean.opcaoMenuAtiva('Conta')}">
-							<f:ajax event="click" render="menu-lateral" listener="#{sessionBean.mudarOpcaoMenu('Conta')}"/>
-							<a href="#{request.contextPath}/conta/conta.xhtml" jsf:id="conta">
+						<li class="">
+							<a href="#{request.contextPath}/conta/conta.xhtml">
 								<i class="menu-icon fa fa-caret-right"></i>
 								Conta
 							</a>
 							<b class="arrow"></b>
 						</li>
 	
-						<li jsf:id="fornecedor" class="#{sessionBean.opcaoMenuAtiva('Fornecedor')}">
-							<f:ajax event="click" render="menu-lateral" listener="#{sessionBean.mudarOpcaoMenu('Fornecedor')}"/>
+						<li class="">
 							<a href="#{request.contextPath}/fornecedor/fornecedor.xhtml">
 								<i class="menu-icon fa fa-caret-right"></i>
 								Fornecedor
@@ -454,8 +448,7 @@
 							<b class="arrow"></b>
 						</li>
 	
-						<li jsf:id="usuario" class="#{sessionBean.opcaoMenuAtiva('Usuario')}">
-							<f:ajax event="click" render="menu-lateral" listener="#{sessionBean.mudarOpcaoMenu('Usuario')}"/>
+						<li class="">
 							<a href="#{request.contextPath}/usuario/usuario.xhtml">
 								<i class="menu-icon fa fa-caret-right"></i>
 								Usuário
