--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -521,7 +521,7 @@
 				</li>
 	
 				<li class="">
-					<a href="#">
+					<a href="#{request.contextPath}/redefinirsenha.xhtml">
 						<i class="menu-icon fa fa-key"></i>
 						<span class="menu-text"> Alterar Senha </span>
 					</a>
