--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -59,7 +59,7 @@
 			</button>
 	
 			<div class="navbar-header pull-left">
-				<a href="index.html" class="navbar-brand">
+				<a href="#{request.contextPath}/index.xhtml" class="navbar-brand">
 					<small>
 						<i class="fa fa-money"></i>
 						Agenda Financeira
@@ -69,83 +69,6 @@
 	
 			<div class="navbar-buttons navbar-header pull-right" role="navigation">
 				<ul class="nav ace-nav">
-					<li class="grey dropdown-modal">
-						<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-							<i class="ace-icon fa fa-tasks"></i>
-							<span class="badge badge-grey">4</span>
-						</a>
-	
-						<ul class="dropdown-menu-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close">
-							<li class="dropdown-header">
-								<i class="ace-icon fa fa-check"></i>
-								4 Tasks to complete
-							</li>
-	
-							<li class="dropdown-content">
-								<ul class="dropdown-menu dropdown-navbar">
-									<li>
-										<a href="#">
-											<div class="clearfix">
-												<span class="pull-left">Software Update</span>
-												<span class="pull-right">65%</span>
-											</div>
-	
-											<div class="progress progress-mini">
-												<div style="width:65%" class="progress-bar"></div>
-											</div>
-										</a>
-									</li>
-	
-									<li>
-										<a href="#">
-											<div class="clearfix">
-												<span class="pull-left">Hardware Upgrade</span>
-												<span class="pull-right">35%</span>
-											</div>
-	
-											<div class="progress progress-mini">
-												<div style="width:35%" class="progress-bar progress-bar-danger"></div>
-											</div>
-										</a>
-									</li>
-	
-									<li>
-										<a href="#">
-											<div class="clearfix">
-												<span class="pull-left">Unit Testing</span>
-												<span class="pull-right">15%</span>
-											</div>
-	
-											<div class="progress progress-mini">
-												<div style="width:15%" class="progress-bar progress-bar-warning"></div>
-											</div>
-										</a>
-									</li>
-	
-									<li>
-										<a href="#">
-											<div class="clearfix">
-												<span class="pull-left">Bug Fixes</span>
-												<span class="pull-right">90%</span>
-											</div>
-	
-											<div class="progress progress-mini progress-striped active">
-												<div style="width:90%" class="progress-bar progress-bar-success"></div>
-											</div>
-										</a>
-									</li>
-								</ul>
-							</li>
-	
-							<li class="dropdown-footer">
-								<a href="#">
-									See tasks with details
-									<i class="ace-icon fa fa-arrow-right"></i>
-								</a>
-							</li>
-						</ul>
-					</li>
-	
 					<li class="purple dropdown-modal">
 						<a data-toggle="dropdown" class="dropdown-toggle" href="#">
 							<i class="ace-icon fa fa-bell icon-animated-bell"></i>
@@ -337,7 +260,7 @@
 	
 						<ul class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
 							<li>
-								<a href="#">
+								<a href="#" onclick="javascript:preferencias()">
 									<i class="ace-icon fa fa-cog"></i>
 									Minhas preferências
 								</a>
@@ -377,21 +300,21 @@
 	
 			<div class="sidebar-shortcuts" id="sidebar-shortcuts">
 				<div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
-					<button class="btn btn-success">
-						<i class="ace-icon fa fa-signal"></i>
-					</button>
+					<a href="#{request.contextPath}/fornecedor/fornecedor.xhtml" class="btn btn-success" style="margin-bottom: 0;">
+						<i class="ace-icon fa fa-truck"></i>
+					</a>
 	
-					<button class="btn btn-info">
-						<i class="ace-icon fa fa-pencil"></i>
-					</button>
+					<a href="#{request.contextPath}/pagamento/pagamento.xhtml" class="btn btn-info" style="margin-bottom: 0;">
+						<i class="ace-icon fa fa-calendar"></i>
+					</a>
 	
-					<button class="btn btn-warning">
-						<i class="ace-icon fa fa-users"></i>
-					</button>
-	
-					<button class="btn btn-danger">
-						<i class="ace-icon fa fa-cogs"></i>
-					</button>
+					<a href="#{request.contextPath}/baixa/baixa.xhtml" class="btn btn-warning" style="margin-bottom: 0;">
+						<i class="ace-icon fa  fa-check-square-o"></i>
+					</a>
+					
+					<a href="#{request.contextPath}/relatorios/contasapagar.xhtml" class="btn btn-danger" style="margin-bottom: 0;">
+						<i class="ace-icon fa fa-print"></i>
+					</a>
 				</div>
 	
 				<div class="sidebar-shortcuts-mini" id="sidebar-shortcuts-mini">
@@ -463,10 +386,6 @@
 						<i class="menu-icon fa fa-dollar"></i>
 						<span class="menu-text"> 
 							Contas a Pagar
-							<span class="badge badge-transparent tooltip-error" title="2 Important Events">
-								<i class="ace-icon fa fa-exclamation-triangle red bigger-130"></i>
-							</span>
-							 
 						</span>
 						<b class="arrow fa fa-angle-down"></b>
 					</a>
@@ -565,14 +484,6 @@
 	
 					</ul><!-- /.breadcrumb -->
 	
-					<div class="nav-search" id="nav-search">
-						<form class="form-search">
-							<span class="input-icon">
-								<input type="text" placeholder="Pesquisar ..." class="nav-search-input" id="nav-search-input" autocomplete="off" />
-								<i class="ace-icon fa fa-search nav-search-icon"></i>
-							</span>
-						</form>
-					</div><!-- /.nav-search -->
 				</div>
 	
 				<div class="page-content">
@@ -728,6 +639,14 @@
 		<h:outputScript library="aceAdmin" name="js/ace.min.js"/>
 
 		<!-- inline scripts related to this page -->
-		<ui:insert name="scripts"></ui:insert>
+		<ui:insert name="scripts">
+			<script>
+				function preferencias(){
+					console.log('>>>>>>>>>>. teste');
+					$("div.ace-settings-btn").toggleClass( "open" );
+					$("div.ace-settings-box").toggleClass( "open" );
+				}
+			</script>
+		</ui:insert>
 	</h:body>
 </html>
