Correção da classe SecurityUserDatailsDao (obtenção do EntityManager a cada requisição)

--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -267,7 +267,7 @@
 							</li>
 	
 							<li>
-								<a href="#">
+								<a href="#{request.contextPath}/usuario/meusdados.xhtml">
 									<i class="ace-icon fa fa-user"></i>
 									Meus dados
 								</a>
